--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:gravity="center"
-        android:text="免费娱乐软件，仅供学习交流\n\nPowered by Ryens"
+        android:autoLink="all"
+        android:text="免费娱乐软件，仅供学习交流\n\nhttps://b23.tv/BV1TU4y1Y7u7\n\nPowered by Ryens"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
