--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_marginBottom="12dp"
         android:gravity="center"
         android:autoLink="all"
-        android:text="免费娱乐软件，仅供学习交流\n\nhttps://b23.tv/BV1TU4y1Y7u7\n\nPowered by Ryens"
+        android:text="免费娱乐软件，仅供学习交流\n\nhttps://b23.tv/BV1iA41157NL\n\nPowered by Ryens"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
