--- a/app/src/main/res/xml/pre_settings.xml
+++ b/app/src/main/res/xml/pre_settings.xml
@@ -20,6 +20,14 @@
             android:title="充电守护语音"
             app:iconSpaceReserved="false" />
 
+        <SwitchPreference
+            android:defaultValue="true"
+            android:dependency="@string/charge_service"
+            android:key="@string/charge_click_close"
+            android:summary="显示鲨鲨酱时点击即关闭显示"
+            android:title="点击关闭"
+            app:iconSpaceReserved="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
