[优化]隐藏导航栏

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,5 +25,6 @@
     <style name="ChargeAnimation">
         <item name="android:windowEnterAnimation">@null</item>
         <item name="android:windowExitAnimation">@null</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 </resources>
