--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,12 +19,7 @@
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowAnimationStyle">@style/ChargeAnimation</item>
+        <item name="android:windowAnimationStyle">@null</item>
     </style>
 
-    <style name="ChargeAnimation">
-        <item name="android:windowEnterAnimation">@null</item>
-        <item name="android:windowExitAnimation">@null</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-    </style>
 </resources>
