--- a/app/src/main/res/layout/permission_item_layout.xml
+++ b/app/src/main/res/layout/permission_item_layout.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/per_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="权限"
         android:textColor="@color/black"
@@ -14,19 +14,22 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/per_desc"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/per_agree"/>
 
     <TextView
         android:id="@+id/per_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:text="权限说明"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/per_title"
-        app:layout_constraintTop_toBottomOf="@id/per_title" />
+        app:layout_constraintTop_toBottomOf="@id/per_title"
+        app:layout_constraintRight_toLeftOf="@id/per_agree"/>
 
     <Button
+        android:id="@+id/per_agree"
         style="@android:style/Widget.DeviceDefault.Button.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
