--- a/app/src/main/res/xml/pre_settings.xml
+++ b/app/src/main/res/xml/pre_settings.xml
@@ -34,6 +34,13 @@
             app:iconSpaceReserved="false" />
 
         <SwitchPreference
+            android:defaultValue="true"
+            android:key="@string/charge_foreground_service"
+            android:summary="建议开启，不然服务在后台容易被系统杀死，缺点是会持续显示一个通知"
+            android:title="设置为前台服务"
+            app:iconSpaceReserved="false" />
+
+        <SwitchPreference
             android:defaultValue="false"
             android:dependency="@string/charge_service"
             android:key="@string/charge_is_audio"
