--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".view.activity.MainActivity">
 
     <fragment
         android:id="@+id/shark_settings"
-        android:name="com.su.sharkmanfunc.SettingsFragmentCompat"
+        android:name="com.su.charging.view.fragment.SettingsFragmentCompat"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:text="Hello World!"
