--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SharkManFunc" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Charging" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,7 +18,7 @@
         <item name="colorPrimary">@color/teal_200</item>
     </style>
 
-    <style name="Theme.Charge" parent="Theme.SharkManFunc">
+    <style name="Theme.Charge" parent="Theme.Charging">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowFullscreen">true</item>
