[feature]支持自定义充电动画和音频

--- a/app/src/main/res/xml/pre_settings.xml
+++ b/app/src/main/res/xml/pre_settings.xml
@@ -14,7 +14,7 @@
             android:title="声明"
             app:iconSpaceReserved="false" />
         <Preference
-            android:summary="B站/酷安@Ryens 单击跳转关注"
+            android:summary="B站/酷安@Ryens 点击跳转关注"
             android:title="开发者"
             app:iconSpaceReserved="false">
             <intent
@@ -25,6 +25,10 @@
     <PreferenceCategory
         android:title="充电相关"
         app:iconSpaceReserved="false">
+        <Preference
+            android:key="video"
+            android:title="充电动画路径"
+            app:iconSpaceReserved="false" />
         <SwitchPreference
             android:defaultValue="false"
             android:key="@string/charge_service"
@@ -97,7 +101,14 @@
             android:title="@string/sound_list"
             app:allowDividerAbove="false"
             app:allowDividerBelow="false"
-            app:iconSpaceReserved="false" />
+            app:iconSpaceReserved="false">
+
+            <Preference
+                android:key="audio"
+                android:title="音频路径"
+                app:iconSpaceReserved="false" />
+
+        </PreferenceCategory>
 
     </com.su.charging.view.preference.HelpPreferenceCategory>
 
