--- a/app/src/main/res/xml/pre_settings.xml
+++ b/app/src/main/res/xml/pre_settings.xml
@@ -21,6 +21,14 @@
                 android:action="android.intent.action.VIEW"
                 android:data="@string/b_url" />
         </Preference>
+        <Preference
+            android:summary="点击跳转Github"
+            android:title="开源代码"
+            app:iconSpaceReserved="false">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="@string/github_url" />
+        </Preference>
     </PreferenceCategory>
     <PreferenceCategory
         android:title="充电相关"
@@ -102,6 +110,11 @@
             app:allowDividerAbove="false"
             app:allowDividerBelow="false"
             app:iconSpaceReserved="false">
+
+            <Preference
+                android:key="clear_audio_flags"
+                android:title="清空音频配置"
+                app:iconSpaceReserved="false" />
 
             <Preference
                 android:key="audio"
